Transfer all events